...
            "state" : "translated",
            "value" : "カロリーを追加"
          }
        }
      }
    },
    "Add Exercise" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Añadir ejercicio"
...
            "value" : "レップ、限界まで、時間制、自由形式のセットから選択"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Clear Set History" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Borrar historial de series"
...
            "value" : "%@ を削除"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Delete All Routines" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar todas las rutinas"
...
            "value" : "閉じる"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Display Water in Liters" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mostrar agua en litros"
...
            "value" : "時間（分）"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Edit Routine" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Editar rutina"
...
            "value" : "最初のエクササイズへ"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Health" : {
      "comment" : "A menu item that opens the Health app.",
      "extractionState" : "manual",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
...
            "value" : "セットの種類"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "SetDeck" : {
      "extractionState" : "manual",
      "shouldGenerateSymbol" : false,
      "shouldTranslate" : false
    },
    "SetDeck app logo" : {
      "extractionState" : "manual",
...
            "value" : "セット"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajustes"
...
            "value" : "ワークアウトを開始"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Stats" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Estadísticas"
...
            "value" : "種類"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Use Day–Month–Year Dates" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Usar fechas día–mes–año"
...
